# django-orm-evaluate

./: README.md  pyproject.toml  requirements.txt
evalute/: manage.py
evalute/core/: models.py  urls.py  views.py
evalute/core/migrations/: 0001_initial.py  0002_ground_dump_ground.py
evalute/core/templates/core/: index.html
evalute/evalute/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_django_orm_evalute.py
